@@ -1,5 +1,10 @@
 2009-06-04  Miloslav Trmač  <mitr@redhat.com>
 
+	* lib/ui.c (libvk_ui_set_generic_cb, libvk_ui_set_passphrase_cb)
+	(libvk_ui_set_nss_pwfn_arg): Free the previous data before overwriting
+	it.
+	* lib/libvolume_key.h: Update comments.
+
 	* lib/libvolume_key.c (libvk_volume_create_packet_cleartext)
 	(libvk_volume_create_packet_assymetric)
 	(libvk_volume_create_packet_with_passphrase)
